[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"


[project]
name = "pymox"
dynamic = ["version"]
description = "Python mocking on steroids"
readme = "README.md"
requires-python = ">=3.10,<4"
license = { text = "Apache-2.0" }
authors = [{ name = "Ivan Neto", email = "ivan.cr.neto@gmail.com" }]
keywords = ["mox", "mock", "test", "mocking", "unittest", "pymox"]
classifiers = [
    "Environment :: Console",
    "Development Status :: 5 - Production/Stable",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "coverage>=7.2,<8",
    "pytest>=7.4,<8",
    "pytest-beeprint>=0.1.2,<0.2",
    "pytest-cov>=4.1.0,<5",
    "pytest-xdist>=3.3.1,<4",
]
lint = [
    "pre-commit>=3.5",
    "ruff>=0.12,<0.13",
    "mypy>=1.8",
]

[project.urls]
Homepage = "http://pymox.rtfd.io"
Documentation = "http://pymox.rtfd.io"
Repository = "https://github.com/ivancrneto/pymox"

[tool.hatch.version]
source = "versioningit"

[tool.versioningit]
default-version = "0.0.0+unknown"

[tool.versioningit.vcs]
default-tag = "0.0.0+unknown"

[tool.versioningit.next-version]
method = "smallest"

[tool.versioningit.format]
distance = "{next_version}-dev{distance}+{vcs}{rev}"
dirty = "{base_version}+d{build_date:%Y%m%d}"
distance-dirty = "{next_version}-dev{distance}+{vcs}{rev}.d{build_date:%Y%m%d}"

[tool.versioningit.write]
file = "mox/__version__.py"

[tool.hatch.build.targets.sdist]
packages = ["mox", "pymox"]
include = ["mox/**", "pymox/**"]

[tool.hatch.build.targets.wheel]
packages = ["mox", "pymox"]
include = ["mox/**", "pymox/**"]

[tool.pytest.ini_options]
# Keep default output quiet/captured; pass -vv, -s or -n auto (pytest-xdist) on
# the command line when you want them. *_helper.py modules are imported by the
# tests, not collected as tests themselves.
addopts = ["--ignore-glob=*_helper.py"]
python_files = "*test*.py"

[tool.coverage.run]
# versioningit writes this file at build/install time; it is generated, not
# source, so it should not count toward coverage. The glob matches both the
# relative path and the absolute path recorded under an editable install.
omit = ["*__version__.py"]


[tool.mypy]
python_version = "3.10"
files = ["mox", "pymox"]
ignore_missing_imports = true
exclude = ['mox/__version__\.py']


[tool.ruff]
line-length = 120
target-version = "py310"
# Ruff handles linting (flake8), formatting (black) and import sorting (isort).
extend-exclude = ["mox/__version__.py"]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort.
select = ["E", "F", "W", "I"]
# E203 (whitespace before ':') conflicts with how the formatter spaces slices.
ignore = ["E203"]

[tool.ruff.lint.isort]
known-first-party = ["mox", "pymox"]
lines-after-imports = 2

[tool.ruff.format]
# Keep the existing double-quote, trailing-comma style black produced.
quote-style = "double"


[tool.bandit.assert_used]
excludes = ['*_test.py', '*/test_*.py']
